feat: update 1.20.1 fabric (#17)
Some updates to fabric including:

- Semi finished REI integration (will finish it once I get to it in
Aether)
- Cleaned up some unnecessary dependencies
- Merged upstream changes